--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Making REST API with spring boot</description>
 	<properties>
 		<java.version>13</java.version>
+<!--		<start-class>com.bt.collab.alu.api.webapp.Application</start-class>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,6 +23,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.20</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -37,6 +43,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.21</version>
 		</dependency>
 	</dependencies>
 
