--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#Changing the server port
+server.port = 8080
 
+#database configuration:mysql
+spring.datasource.url = jdbc:mysql://localhost:3306/practice
+spring.datasource.username = root
+spring.datasource.password = password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#hibernate configurtion
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
